--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Немного про хобби - Music Is The Answer"
+title: "Music Is The Answer - Больше чем хобби DJ-инг & Music Production"
 publishedAt: "2025-11-30"
 summary: "Персональное"
 tags: "programming, autobiography, me"
@@ -13,33 +13,36 @@ image: "/photos/super-ivan.jpg"
 Это казалось мне невероятно увлекательным и вдохновляющим. 
 А сама музыка всегда поднимала настроение, давала энергию и хотелось двигаться в ритм. 
 
-В начале нулевых я жил в Ростове На Дону, там же начал играть как dj, пробовать писать своё.
+Я вырос в Тбилиси (Грузия), в начале нулевых я жил в Ростове На Дону, там же начал играть как dj, пробовать писать своё.
 А чуть позже познакомившись с такими же увлеченными людьми, меня начали звать на радио, и играть на небольших вечеринках и рейвах.
 Несмотря на то что к концу нулевых танцевальная культура стала убывать или вовсе сходить на нет, мое увлечение плавно перешло в студию и технологии.
 Чтобы записывать качественный звук необходимо многое понимать в физике звука, в звуко-инженерии и технологиях.
 И в целом иметь вкус, понимать тенденции в электронной музыке. 
 
 Мне хотелось расти в этой профессии, я изучал эту интересную науку.
-Конечно это принесло свои плоды, а свой первый релиз я выпустил в 2006 году, записав трек вместе с вокалом Марины Броневич, в стиле jazzy deep house, релиз был выпущен на SSI records. 
+Конечно это принесло свои плоды, а свой первый релиз я выпустил в 2006 году, записав трек вместе с Мариной Броневич, в стиле jazzy deep house, релиз был выпущен на SSI records. 
 Так сложилось что в России электроника имеет скорее "точечную популярность" по сравнению с западом где танцевальная культура давно уже является нормальностью (середины 80-х годов).
 
 
 <img src="/photos/ableton.png" alt="Ableton Live" width="400" />
 
 
-В Европе это экономически здоровая индустрия с выпуском музыки, громкими событиями и фестивалями которые приносят огромную прибыль, 
-и создают экономику и инфраструктуру вокруг этого социального явления. 
-Танцы в выходные - это нормальность! А танцующий человек скорее символ счастливой и успешной жизни чем что то другое. 
-Вероятно когда человеку хорошо, его реакция на это - танец с улыбкой на лице! 
+Например в Европе это экономически здоровая индустрия с выпуском музыки, громкими событиями и фестивалями которые приносят огромную прибыль, 
+и создают экономику и инфраструктуру вокруг этого социального явления. Думаю многие знают остров Ибица в Испании где вся экономика построена вокруг танцевальной музыки.
+В Европе танцы в выходные - это нормальность! А танцующий человек скорее символ счастливой и успешной жизни чем что то другое. 
+Вероятно когда человеку хорошо, его реакция на это - танец с улыбкой на лице! Почему бы и нет ?
 
 
-Понимая все происходящее мне всегда хотелось делать карьеру артиста там где это актуально. 
-Но ситуация которая складывается вокруг меня не распологает к переезду в эпицентр культуры,
+Понимая все происходящее мне всегда хотелось делать карьеру артиста там где это актуально. К сожалению актуализировать музыку на родине не просто, во многом 
+это связано с стереотипом о клубах, танцевальной культуре, музыке, что на мой взгляд в целом неправильно!
+Танец это здоровая реакция, музыка это про технологии и знания, а клубы это про место общения людей которые объеденены идеей создания.
+Лично на моей практике на вечеринках создавался бизнес, семьи, распостранялись конструктивные и прогрессивные идеи. И в целом это про общение и хорошее отношение людей к друг другу! 
+Сегодня все изменилось, а ситуация которая складывается вокруг меня не распологает к переезду в эпицентр культуры,
 хотя я готовил себя к этому много лет. Учил технологии, язык, изучал как уcтроена индустрия. 
 
 Так или иначе я продолжаю жить этим, изучаю технологии производства музыки. 
-Смотрю новое, какие тенденций в этом направлении есть, что появляется, что то пробую использовать, играть...
-Так органично, или интуитивно я подобрался к идее писать музыку кодом, программировать. А потом затянуло...
+Смотрю новое, какие тенденций в этом направлении есть, что появляется, что то пробую использовать, играть. Иногда пробую писать свои инструменты используя навыки программирования.
+Начав кодить я интуитивно подобрался к идее писать музыку кодом, программировать.
 В начале что то в FoxDot, SuperCollider. Думаю - это так глупо писать синтаксические конструкции и не понимать что это все значит.
 JavaScript, Python ! В начале ничего не понятно, но очень хочется понять ! Английский спасает в таких ситуациях.
 В итоге залез по уши в это все. И мне нравится!
@@ -94,4 +97,14 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 
 <a href="https://share.google/rOHr360Y5tcRxlalM"> Web Area.</a>
 
+
+
+---
+Если вас интересует идея создания музыки, вы хотите знать об этом больше чем сейчас. 
+Хотите понять как музыка взаимодействует с психикой человека, какие интсрументы для этого есть, эффекты, что актуально сейчас, и как работать со сзвком 
+в Ableton Live:
+
+Свяжитесь со мной в телеграм !
+
+telegram: @ewanG808
 
