--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -101,7 +101,7 @@ JavaScript, Python ! В начале ничего не понятно, но оч
 
 ---
 Если вас интересует идея создания музыки, вы хотите знать об этом больше чем сейчас. 
-Хотите понять как музыка взаимодействует с психикой человека, какие интсрументы для этого есть, эффекты, что актуально сейчас, и как работать со сзвком 
+Хотите понять как музыка взаимодействует с психикой человека, какие интсрументы для этого есть, эффекты, что актуально сейчас, и как работать со сзвуком 
 в Ableton Live:
 
 Свяжитесь со мной в телеграм !
