message wow-wow

--- a/content/music-is-the-answer.mdx
+++ b/content/music-is-the-answer.mdx
@@ -6,6 +6,20 @@ tags: "programming, autobiography, me"
 image: "/photos/super-ivan.jpg"
 ---
 
+`Признаюсь вам что я очень заебался искать счастье, любовь, работу, покой в себе и вокруг.
+В последнее время я очень сильно разочаровался во многом что видел в этой жизни.
+Самое лучшее что есть это музыка, любовь, радость детей, и почти детская радость взрослых в суете повторяющихся историй 
+по сути одних и тех же историй но с разными действующими лицами.
+Хотел простых понятных вещей от жизни, но по итогу получил ощущение провала проверки на "нормальность" и чувство какого то осуждения.
+Словно всем только и нужно чтобы ты был супер правильным, нормальным, словно все только и ждут от меня этой нормальности и правильности.
+А я нихуя не нормальный, я ебнутый ! Я могу слетать с катушек, отстаивать свое мнение, справедливость своих взглядов, и толкаюсь когда мне наступают на голову.
+Я блядь просто хочу жить на острове, крутить синтезаторы, и заставлять танцевать и улыбаться людей! Может это моя фантазия, но я точно знаю что есть в мире полно людей которые так умеют жить.  
+Но по факту оказалось что у меня ничего нет, все отдал людям которых любил.
+До сих пор люблю!
+`
+
+
+
 ### Привет !
 
 У меня есть увлечение, которое, пожалуй, немного больше, чем просто хобби — это электронная музыка.
